# template_to_json

./: AGENTS.md  README.md  TODO.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
scripts/: __init__.py  demo_extract.py  format.sh  gen_rect_template_pdf.py  lint.sh  rasterize_pdf.py
src/templator/: __init__.py  cli.py  exporters.py  geometry.py  image_extract.py  job_runner.py  models.py  pdf_extract.py  render.py
src/templator/encoders/: __init__.py
tests/: conftest.py  test_cli.py  test_encoders.py  test_exporters.py  test_geometry.py  test_highlevel_extract.py  test_image_extract.py  test_integration_template_accuracy.py  test_job_runner.py  test_pdf_extract.py  test_render.py  test_scripts.py
